@@ -1,1 +1,1 @@
-Kostya Zolotarov <Kostya.Zolotarov@globalrelay.net>
+Kostya Zolotarov <kostya.zolotarov@gmail.com>
