@@ -37,7 +37,7 @@ SOFTWARE.
 #        named 'settings.calmod' (eg. ~/builds/calmod/settings.calmod)
 
 . ./settings.${PWD##*/}
-. library.logging.sh
+. library.log.sh
 
 # Executables
 for file in ${application_executable_files[@]};
