@@ -1,12 +1,17 @@
+* 1406879 
+|  2015-07-16 
+|  Kostya Zolotarov 
+|  Added index file formatting (HEAD, origin/development, origin/HEAD, development) 
+|  
 * f7f4fb3 
 |  2015-07-14 
 |  Kostya Zolotarov 
-|  New file indexing algorithm (HEAD, development) 
+|  New file indexing algorithm 
 |  
 * 25b6b23 
 |  2015-07-13 
 |  Kostya Zolotarov 
-|  Fixed VERSION file not found error (origin/development, origin/HEAD) 
+|  Fixed VERSION file not found error 
 |  
 * f1440b3 
 |  2015-07-10 
